# music-box-rs

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Contributing.md  Cross.toml  Dockerfile  Makefile  README.md
src/: main.rs  task.rs
src/lib/: config.rs  db.rs  lib.rs  piano.rs  sequencer.rs  take_duration.rs  ui.rs  util.rs
src/lib/db/: button_map.rs  model.rs  song.rs  types.rs
src/lib/ui/: button_state.rs  mac_os.rs  raspberry_pi.rs  traits.rs
src/lib/util/: download_song.rs  play_sound.rs
src/task/: game.rs  http.rs  loop.rs  song.rs
src/task/http/: button_map.rs  song.rs  task.rs  types.rs
